# OpenKodp

./: CMakeLists.txt
src/: main_lua.cpp  main_sdl2.cpp  main_tgui.cpp
src/frontend/: coord.hpp  scene.hpp  sprite.hpp  window.hpp
src/frontend/widgets/: button.hpp  widget.hpp
src/menu/: menu.cpp  menu.hpp  option.cpp  option.hpp
src/simulation/: battle.hpp  buildings.hpp  culture.hpp  date.hpp  event.hpp  game.cpp  gods.hpp  history.hpp  map.hpp  notable.cpp  notable.hpp  relation.hpp  tribe.cpp  tribe.hpp
src/utils/: page_parser.cpp  page_parser.hpp  parse_mark_up.cpp
